[metadata]
name = dot
version = attr: dot.__version__
author = attr: dot.__author__
description = attr: dot.__doc__
long_description = file: README.md
log_description_content_type = text/markdown
url = attr: dot.__url__
license = BSD 3-Clause License
classifiers =
  Programming Language :: Python :: 3.8

[options]
zip_safe = False
package_dir =
  = .
packages = find:
python_requires = >=3.8,<3.9
install_requires =
    click
    dlib
    face_alignment
    numpy
    opencv_python
    opencv-contrib-python
    Pillow
    PyYAML
    requests
    scikit_image
    scipy
    mediapipe
    onnxruntime
    torch
    torchvision

[options.packages.find]
where = .
exclude = tests

[options.entry_points]
console_scripts =
    dot = dot.__main__:main
