[bumpversion]
current_version = 1.1.0
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)?
serialize = 
	{major}.{minor}.{patch}

[bumpversion:file:src/dot/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
name = dot
version = attr: dot.__version__
author = attr: dot.__author__
description = attr: dot.__doc__
long_description = file: README.md
log_description_content_type = text/markdown
url = attr: dot.__url__
license = BSD 3-Clause License
classifiers = 
	Programming Language :: Python :: 3.8

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.8,<3.9
install_requires = 
	click
	dlib
	face_alignment
	kornia
	mediapipe
	numpy
	onnxruntime
	opencv-contrib-python
	opencv_python
	Pillow
	protobuf
	PyYAML
	requests
	scikit_image
	scipy
	torch
	torchvision

[options.extras_require]
dev = 
	black
	bumpversion
	flake8
	ipdb
	ipython
	isort
	pre-commit
	pytest
	pytest-cov
	types-PyYAML

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	dot = dot.__main__:main
